feat: edit image

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -52,3 +52,22 @@
 .descricao-prato{
     font-size: 20px;
 }
+
+.instagram img {
+    width: 300px;
+    height: auto;
+    padding: 0;
+}
+
+.facebook img{
+    width: 200px;
+    height: auto;
+    padding: 50px;
+}
+
+.telefone img{
+    width: 200px;
+    height: auto;
+    padding: 50px;
+}
+
