--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -20,12 +20,12 @@ body {
     display: flex;
     background-color: var(--marrom-base);
     align-items: center;
-    height: 50%;
+    height: 8rem;
     background-image: linear-gradient(to left, rgb(51, 43, 35), var(--marrom-base), var(--marrom-base), rgb(34, 25, 16));
 }
 
 .empty {
-    width: 20%;
+    width: 50rem;
 }
 
 
@@ -60,6 +60,8 @@ body {
 
 .nav {
     width: 65%;
+    display: flex;
+    flex-direction: row;
 }
 
 .prato {
